--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -11,10 +11,10 @@
 </div>
 <div class="container">
     <div class="img-fluid">
-        <img src="{{article.image}}" alt="{{ article.title }}">
+        <img src="{{asset('images/articles/' ~ article.image)}}" alt="{{ article.title }}">
     </div>
     <div class="content">
-        <p class="date">Ecrit le {{ article.createdAt | date("d/m/y")  }} à {{ article.createdAt | date("H:m") }}</p>
+        <p class="date">Ecrit le {{ article.createdAt | date("d/m/y")  }} à {{ article.createdAt | date("H:m") }} par <span class="author">{{ article.auteur }}</span></p>
         <h5 class="title"> {{article.title }}</h5>
         <p class="content">{{ article.content | raw }}</p>
     </div>  
