--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -11,7 +11,7 @@
 </div>
     <div class="row">
         {% for article in articles %}
-        <div class="card col-md-4" style="width: 18rem;">
+        <div class="card col-md-4 m-4" style="width: 18rem;">
           <p class="date">Ecrit le {{ article.createdAt | date("d/m/y")  }} à {{ article.createdAt | date("H:m") }} par <span class="author">{{ article.auteur }}</span></p>
           <img src="{{asset('images/articles/' ~ article.image)}}" alt="{{ article.title }}">
             <div class="card-body">
@@ -20,7 +20,7 @@
             </div>
           </div>
         {% endfor %}
-        <div class="col-md-4">
+        <div class="col-md-4 m-4">
           <h2>Catégories</h2>
           <ul class="list-group">
               {% for categorie in categories %}
@@ -33,4 +33,8 @@
           </ul>
       </div>
     </div>
+
+
+    
+
 {% endblock %}
